--- a/src/assets/sass/globals/_variables.scss
+++ b/src/assets/sass/globals/_variables.scss
@@ -1,12 +1,15 @@
 // Text Colors
-$textPrimary: #fff;
+$textWhite: #fff;
 $textDefault: #3f3f3f;
 $textOutline: #3d5afe;
 $textDisabled: #9e9e9e;
 
+// White Bg
+$whiteBg: #fff;
+
 // Primary
 $primary: #2962ff;
-$primaryShadow: 0px 2px 3px rgba(41, 98, 255, 0, 2);
+$primaryShadow: 0px 2px 3px rgba(41, 98, 255, 0.2);
 $primaryActive: #0039cb;
 
 // Secondary
