--- a/src/assets/sass/globals/_typography.scss
+++ b/src/assets/sass/globals/_typography.scss
@@ -1,5 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500&display=swap");
 
+.heavyText {
+  font-family: "Noto Sans";
+  font-weight: 500;
+}
+.lightText {
+  font-family: "Noto Sans";
+  font-weight: 400;
+}
+
+$fontFamily: "Noto Sans";
+$fontWeight: 500;
+
 p {
   margin-top: 0;
 }
