--- a/src/assets/sass/globals/_boilerplate.scss
+++ b/src/assets/sass/globals/_boilerplate.scss
@@ -17,9 +17,11 @@ html {
 
 body {
   // background-color: variables.$primary;
-  max-width: 1440px;
+  // max-width: 1440px;
   min-height: 100vh;
-  margin-inline: auto;
-  display: grid;
-  place-items: center;
+  // margin-left: auto;
+  margin-right: auto;
+  // background-color: red;
+  // display: grid;
+  // place-items: center;
 }
