--- a/src/assets/sass/globals/_boilerplate.scss
+++ b/src/assets/sass/globals/_boilerplate.scss
@@ -18,6 +18,7 @@ html {
 body {
   // background-color: variables.$primary;
   // max-width: 1440px;
+  font-family: "Noto Sans";
   min-height: 100vh;
   // margin-left: auto;
   margin-right: auto;
